--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,9 +5,26 @@ body{
 }
 
 .kasa-header{
-    padding-top: 1rem;
+    margin-top: 1.5rem;
     width: 100%;
     height: 20%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+ 
+}
+
+.navigation{
+    display: flex;
+}
+
+li, a{
+    font-family:"Montserrat", sans-serif ;
+    color:#FF6060;
+    text-decoration: none;
+    list-style: none;
+    font-size: 24px;
+  }
+ .nav-active li{ 
+    text-decoration: underline;
 }
